# ComfyUI-Prompt-Manager

./: .gitignore  README.md  __init__.py  pyproject.toml
ComfyUI-Prompt-Manager/: __init__.py  requirements.txt
data/: .gitignore  prompt_database.json
web/comfyui/: prompt_api.js  prompt_browser.js  prompt_core.js  prompt_manager.css  prompt_node.js  prompt_presets.js  prompt_viewers.js  top_prompt_icon.js
