[project]
name = "ComfyUI-Prompt-Explorer"
description = "A set of custom nodes for efficiently managing, organizing, and processing text prompts in ComfyUI."
version = "1.0.0"
dependencies = []

[project.urls]
Repository = "https://github.com/FengRuoL/ComfyUI-Prompt-Explorer"
# Used by Comfy Registry https://registry.comfy.org

[tool.comfy]
PublisherId = "FengRuoL"
DisplayName = "ComfyUI-Prompt-Explorer"
Icon = ""